# moveit_ws

./: frames.gv
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.1.1.11  libchomp_planner_plugin.so.1.1.11  libcollision_detector_bullet_plugin.so.1.1.11  libcollision_detector_fcl_plugin.so.1.1.11  libgeometric_shapes.so.0.7.3  libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_background_processing.so.1.1.11  libmoveit_cached_ik_kinematics_base.so.1.1.11  libmoveit_cached_ik_kinematics_plugin.so.1.1.11  libmoveit_chomp_optimizer_adapter.so.1.1.11  libmoveit_collision_detection.so.1.1.11  libmoveit_collision_detection_bullet.so.1.1.11  libmoveit_collision_detection_fcl.so.1.1.11  libmoveit_collision_distance_field.so.1.1.11  libmoveit_collision_plugin_loader.so.1.1.11  libmoveit_common_planning_interface_objects.so.1.1.11  libmoveit_constraint_sampler_manager_loader.so.1.1.11  libmoveit_constraint_samplers.so.1.1.11  libmoveit_cpp.so.1.1.11  libmoveit_default_planning_request_adapter_plugins.so.1.1.11  libmoveit_depth_image_octomap_updater.so.1.1.11  libmoveit_depth_image_octomap_updater_core.so.1.1.11  libmoveit_depth_self_filter.so.1.1.11  libmoveit_distance_field.so.1.1.11  libmoveit_dynamics_solver.so.1.1.11  libmoveit_exceptions.so.1.1.11  libmoveit_fake_controller_manager.so.1.1.11  libmoveit_kdl_kinematics_plugin.so.1.1.11  libmoveit_kinematic_constraints.so.1.1.11  libmoveit_kinematics_base.so.1.1.11  libmoveit_kinematics_metrics.so.1.1.11  libmoveit_kinematics_plugin_loader.so.1.1.11  libmoveit_lazy_free_space_updater.so.1.1.11  libmoveit_lerp_planner_plugin.so.0.1.0  libmoveit_lma_kinematics_plugin.so.1.1.11  libmoveit_mesh_filter.so.1.1.11  libmoveit_motion_planning_rviz_plugin.so.1.1.11  libmoveit_motion_planning_rviz_plugin_core.so.1.1.11  libmoveit_move_group_capabilities_base.so.1.1.11  libmoveit_move_group_default_capabilities.so.1.1.11  (+55 more)
logs/activity_rec/: build.check.000.log.stderr
logs/aruco_msgs/: build.make.008.log.stderr
logs/common_sensors/: build.make.000.log.stderr
logs/expanda/: build.check.516.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.017.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.038.log.stderr  build.make.043.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.064.log.stderr  build.make.074.log.stderr  build.make.075.log.stderr  build.make.080.log.stderr  build.make.092.log.stderr  build.make.095.log.stderr  build.make.096.log.stderr  build.make.115.log.stderr  build.make.116.log.stderr  build.make.117.log.stderr  build.make.118.log.stderr  build.make.123.log.stderr  build.make.131.log.stderr  build.make.133.log.stderr  build.make.137.log.stderr  build.make.138.log.stderr  (+62 more)
logs/franka_gripper/: build.check.290.log.stderr
logs/franka_visualization/: build.check.089.log.stderr
logs/goal_state_publisher/: build.make.010.log.stderr
logs/moveit_core/: build.symlink.040.log.stderr
logs/moveit_task_constructor_core/: build.cmake.000.log.stderr  build.symlink.021.log.stderr
logs/moveit_tutorials/: build.make.005.log.stderr  build.make.007.log.stderr  build.make.071.log.stderr
logs/my_services/: build.check.003.log.stderr  build.check.180.log.stderr  build.check.432.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.018.log.stderr  (+53 more)
src/expanda/: CMakeLists.txt
src/expanda/launch/: MT_Demo.launch  aruco_mesh_sim.launch  aruco_sim.launch  depthcam.launch  first.launch  franka_real.launch  gazebo_pick.launch  kinect_spawm.launch  mg_interface.launch  object_detection_demo.launch  old_franka_real.launch  pick_place.launch  rviz_loader.launch  second.launch  spawn_aruco_env.launch  spawn_aruco_mesh_env.launch  spawn_pick_place_env.launch  spawn_stick_env.launch  spawn_stone_env.launch  surrounding.launch  triplet_tester.launch  zero.launch
src/expanda/meshes/: bowl.stl  bowl2.stl  bowl_ass.stl  bowl_old.stl  cone_05_015.stl  cone_1000_200.stl  cone_500_110.stl  cone_500_150.stl  cone_530_210.stl  cone_600_130.stl  cone_620_250.stl  cone_700_130.stl  cube_stick.stl  cutting_ass.stl  flakes.stl  knife_ass.stl  pan_ass.stl  plate_330_240.stl  plate_330_240_old.stl  plate_flipped.stl  spoon_ass.stl
src/expanda/src/: MT_Demo.cpp  cam_tripod_spawner.cpp  cloud_merger.cpp  cloud_merger_worldframe.cpp  depthcam_demo.cpp  eight_mesh_spawner.cpp  icp2_node.cpp  icp_node.cpp  multimesh_spawner.cpp  object_detection_demo.cpp  pcl_bagpublisher.cpp  triplet_detection.cpp
src/expanda/src/backup/: cloud_merger_backup.cpp  gazebo_pick_backup.cpp  icp_node_backup.cpp  mg_interface_backup.cpp  multiobject_multicam_track_backup.cpp  testing_pickplace_server_backup.cpp  track_object.cpp
src/expanda/src/old_code/: gazebo_pick.cpp  mg_interface.cpp  multicam_track.cpp  multiobject_multicam_track.cpp  pick_place.cpp  test_smart_pickplace.cpp  testing_pickplace_server.cpp  track_object.cpp
src/expanda/src/tests_demos/: mg_interface (copy).cpp  mg_interface_testing.cpp  mg_interface_trial_pipeline.cpp
(+2826 files in other folders)
